Fixed the scroll problem on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,5 @@ body {
     -o-background-size: cover;
     background-size: cover;
     margin: 0;
+    overflow-x: hidden;
 }
